# forja

./: .coverage  .env.example  .gitignore  CLAUDE.md  OVERNIGHT_LOG.md  README.md  conftest.py  forja_legacy.py  forja_tasks.db  pyproject.toml
.forja/: feature-events.jsonl  spec-enrichment.json
.forja-tools/: forja_context.py  forja_features.py  forja_hook_filter.sh  forja_learnings.py  forja_observatory.py  forja_outcome.py  forja_preflight.py  forja_specreview.py  forja_utils.py  forja_validator.py  observatory_template.html
context/: prd.md  teammate_map 2.json  teammate_map.json
scripts/: verify_template_sync.py
src/: forja_tasks.db
src/api/: models.py  router.py  schemas.py
src/auth/: database.py  main.py  models.py  router.py  security.py
src/cli/: main.py
src/converter/: __init__.py  converter.py
src/forja/: __init__.py  cli.py  config.py  config_loader.py  constants.py  context_setup.py  init.py  planner.py  projects.py  runner.py  (+2 more)
src/forja.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_call_kimi.py  test_config_loader.py  test_context_setup.py  test_critical_coverage.py  test_decision_log.py  test_event_stream.py  test_feature_dataclass.py  test_feature_status.py  test_handoff.py  test_init.py  test_integration.py  test_learnings_extract.py  test_llm_providers.py  test_load_dotenv.py  test_observatory_metrics.py  test_parse_json.py  test_planner.py  test_projects.py  test_qa_skills.py  test_real_api.py  test_runner.py  test_security.py  test_status.py  test_template_sync.py  test_validator.py
(+41 files in other folders)
