[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forja"
version = "0.1.0"
description = "Autonomous software factory. PRD in, tested software out."
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.scripts]
forja = "forja.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forja = ["templates/*", "templates/skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
